--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,12 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/Dotnet.gitignore
 
+# User-specific files
+GoogleGeminiAPIKey.cs
+
+#VisualStudio
+.vs/
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
